Added EF code first.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "re2023DB": "server=localhost;database=re2023;user=re2023admin;password=passme65%"
+  },
   "AllowedHosts": "*"
 }
